# disk-cleaner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION_FIX_SUMMARY.md  LICENSE  Makefile  PATH_COMPATIBILITY_FIX.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  README_zh.md  SKILL.md  TEST_REPORT.md  USAGE_GUIDE.md  V2.1-DEVELOPMENT-SUMMARY.md  disk-cleaner.skill  implementation-tracker.md  mypy.ini  notes.md  performance_progress_improvement.md  pyproject.toml  pytest.ini  task_plan.md  test_cache_detection.py  test_emergency_fixes.py  test_new_features.py
.github/workflows/: lint.yml  test.yml
benchmark_results/: benchmark_1769133655.json  benchmark_1769133665.json  large_scale_test_20260123_110044.json
diskcleaner/: __init__.py
diskcleaner/config/: __init__.py  loader.py
diskcleaner/core/: __init__.py  cache.py  classifier.py  growth_analyzer.py  interactive.py  organizer.py  progress.py  safety.py  scanner.py  smart_cleanup.py
diskcleaner/core/rules/: __init__.py  archive_rules.py
diskcleaner/optimization/: __init__.py  concurrency.py  delete.py  hash.py  memory.py  profiler.py  scan.py
docs/: ARCHIVE_FEATURE.md  LARGE_SCALE_TEST_REPORT.md  PERFORMANCE_REPORT.md  design-2025-01-22-enhancement.md
docs/plans/: 2025-01-23-performance-optimization-design.md
examples/: archive_demo.py
scripts/: analyze_disk.py  clean_disk.py  monitor_disk.py  package_skill.py  scheduler.py
skills/disk-cleaner/: ENCODING_FIX_SUMMARY.md  SKILL.md  disk-cleaner.skill
skills/disk-cleaner/diskcleaner/core/: organizer.py  scanner.py
skills/disk-cleaner/diskcleaner/core/rules/: archive_rules.py
skills/disk-cleaner/docs/: WIZARD_USAGE.md
skills/disk-cleaner/scripts/: analyze_disk.py  analyze_growth.py  analyze_progressive.py  check_skill.py  clean_disk.py  find_duplicates.py  interactive_wizard.py  monitor_disk.py  organize_files.py  package_skill.py  skill_bootstrap.py  test_wizard.py
tests/: conftest.py  test_archive_rules.py  test_delete_optimization.py  test_duplicate_finder.py  test_hash_optimization.py  test_integration_phase1.py  test_integration_phase2.py  test_interactive.py  test_optimization.py  test_organize_cli.py  test_organizer.py  test_platforms.py  test_process_manager.py  test_progress.py  test_scan_optimization.py  test_smart_cleanup.py
tests/benchmarks/: scan_d_drive_simple.py  scan_full_d_drive.py  scan_selected_large.py  test_large_scale.py  test_performance.py  test_real_performance.py  test_scan_performance.py
